# filum-crypto

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
Sources/FilerCrypto/: FilerCrypto.swift  filer_cryptoFFI.h  filer_cryptoFFI.modulemap
Sources/FilumCrypto/: FilumCrypto.swift  filum_cryptoFFI.h  filum_cryptoFFI.modulemap
Tests/FilerCryptoTests/: BlobRoundTripTests.swift  CrossLanguageFixtureTests.swift  FilerCryptoTests.swift  MetadataFieldRoundTripTests.swift  RecoveryPhraseTests.swift  SigningTests.swift
Tests/FilerCryptoTests/Fixtures/: README.md  blob_v1.json  metadata_v1.json
Tests/FilumCryptoTests/: BlobRoundTripTests.swift  CrossLanguageFixtureTests.swift  MetadataFieldRoundTripTests.swift  RecoveryPhraseTests.swift  SigningTests.swift
Tests/FilumCryptoTests/Fixtures/: README.md  blob_v2.json  metadata_v2.json  signature_v1.json
crates/filer-crypto/: Cargo.toml
crates/filer-crypto-uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/filer-crypto-uniffi/src/: filer_crypto.udl  lib.rs
crates/filer-crypto/src/: auth.rs  blob.rs  error.rs  kdf.rs  lib.rs  metadata.rs  recovery.rs  vault.rs
crates/filer-crypto/tests/: generate_fixtures.rs
crates/filum-crypto/: Cargo.toml
crates/filum-crypto-uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/filum-crypto-uniffi/src/: filum_crypto.udl  lib.rs
crates/filum-crypto/src/: aad.rs  auth.rs  blob.rs  error.rs  kdf.rs  lib.rs  metadata.rs  recovery.rs  vault.rs
crates/filum-crypto/tests/: generate_fixtures.rs
docs/: VERSIONING.md
docs/superpowers/plans/: 2026-05-20-filer-crypto-setup.md  2026-05-24-filer-crypto-distribution.md  2026-05-24-filer-crypto-distribution.md.tasks.json
docs/superpowers/specs/: 2026-05-20-filer-crypto-setup-design.md  2026-05-24-filer-crypto-distribution-design.md
scripts/: README.md  build-xcframework.sh  build.sh  release-notes.sh
