[workspace]
resolver = "2"
members = [
    "crates/filum-crypto",
    "crates/filum-crypto-uniffi",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/CorvidSoft/filum-crypto"
authors = ["CorvidSoft"]
version = "0.5.0"

[workspace.dependencies]
aes-gcm = "0.10"
hkdf = "0.13"
sha2 = "0.11"
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
# zeroize feature: Mnemonic derives Zeroize/ZeroizeOnDrop, so the word indices
# (a complete encoding of the 256-bit master secret) are wiped on drop rather
# than left in freed memory (#114).
bip39 = { version = "2.0", features = ["zeroize"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"
thiserror = "2.0"
uniffi = "0.31"
