[package]
name = "filer-crypto-uniffi"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "UniFFI bindings for filer-crypto"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "filer_crypto"
# Doc-tests are disabled: rustdoc sees two `filer_crypto` rlibs in the
# workspace (core + this crate share the lib name) and fails with E0464.
# Neither crate has doc-tests, so this is purely about suppressing the
# spurious failure that rustdoc produces when running `cargo test --workspace`.
doctest = false

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
filer-crypto = { path = "../filer-crypto" }
thiserror = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }
zeroize = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
